<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Features.Login.Views.SignUpFragment" android:id="@+id/constraintLayout"
            android:background="?attr/backgroundColor">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name_entry" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/email_entry"
                app:layout_constraintEnd_toEndOf="@+id/email_entry"
                app:layout_constraintStart_toStartOf="@+id/email_entry" android:hint="@string/sign_up_name"
                android:textColor="?android:attr/textColor"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_entry" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/password_entry"
                app:layout_constraintEnd_toEndOf="@+id/password_entry"
                app:layout_constraintStart_toStartOf="@+id/password_entry" android:hint="@string/sign_up_email"
                android:textColor="?android:attr/textColor"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/password_entry" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/sign_up_password"
                android:textColor="?android:attr/textColor"/>
        <Button
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_button" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/password_entry"
                app:layout_constraintEnd_toEndOf="@+id/password_entry"
                app:layout_constraintStart_toStartOf="@+id/password_entry"/>
        <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_button" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
                app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
                app:layout_constraintStart_toStartOf="@+id/sign_up_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
