<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".Features.Login.Views.DashboardFragment">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintBottom_toTopOf="@+id/h_guide_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            app:layout_constraintBottom_toTopOf="@+id/h_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/h_guide_2" />

        <TextView
            android:id="@+id/name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/account_details_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/account_details_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_details"
            app:layout_constraintBottom_toTopOf="@+id/h_guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tba_button_3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/TBA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tba_button_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tba_button_2"
            app:layout_constraintTop_toBottomOf="@+id/tba_button_2" />

        <Button
            android:id="@+id/api_button"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/api_activity"
            app:layout_constraintBottom_toTopOf="@+id/tba_button_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/h_guideline" />

        <Button
            android:id="@+id/tba_button_2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:text="@string/TBA"
            app:layout_constraintBottom_toTopOf="@+id/tba_button_3"
            app:layout_constraintEnd_toEndOf="@+id/api_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/api_button"
            app:layout_constraintTop_toBottomOf="@+id/api_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h_guide_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
