<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".LoginFragment" android:id="@+id/constraintLayout">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/username_input"
            app:layout_constraintEnd_toEndOf="@+id/password_input" app:layout_constraintStart_toStartOf="@+id/password_input"
            android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/password_text"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_input"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintEnd_toEndOf="@+id/password_input"
            app:layout_constraintStart_toStartOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button" app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_text"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/username_input"
            app:layout_constraintEnd_toEndOf="@+id/username_input" app:layout_constraintStart_toStartOf="@+id/username_input"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_text"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/password_input" app:layout_constraintEnd_toEndOf="@+id/password_input"
            app:layout_constraintStart_toStartOf="@+id/password_input"/>
</androidx.constraintlayout.widget.ConstraintLayout>