<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Features.Login.ViewModels.AccountDetailsFragment"
            android:background="?attr/backgroundColor">

        <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/password"
                app:layout_constraintBottom_toBottomOf="@+id/password_input"
                app:layout_constraintEnd_toStartOf="@+id/name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/password_input"/>

        <EditText
                android:id="@+id/name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColor"/>

        <EditText
                android:id="@+id/email_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="@+id/name_input"
                app:layout_constraintStart_toStartOf="@+id/name_input"
                app:layout_constraintTop_toBottomOf="@+id/name_input" android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColor"/>

        <EditText
                android:id="@+id/password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="@+id/email_input"
                app:layout_constraintStart_toStartOf="@+id/email_input"
                app:layout_constraintTop_toBottomOf="@+id/email_input" android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColor"/>

        <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/name"
                app:layout_constraintBottom_toBottomOf="@+id/name_input"
                app:layout_constraintEnd_toStartOf="@+id/name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name_input"/>

        <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/username"
                app:layout_constraintBottom_toBottomOf="@+id/email_input"
                app:layout_constraintEnd_toStartOf="@+id/name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email_input"/>

        <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <Switch
                android:text="@string/dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dark_mode_switch" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/password_input"
                app:layout_constraintEnd_toEndOf="@+id/password_input"
                app:layout_constraintStart_toStartOf="@+id/password_input" android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
